Fix overlapping problem

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ button {
 }
 
 .dust-float {
+	pointer-events: none;
 	position: absolute;
 	width: 100%;
 	height: 100%;
